# xcosm

./: Cargo.toml  README.md  dprint.json  rustfmt.toml
src/: auth.rs  coin.rs  error.rs  fund.rs  lib.rs  math.rs  validate.rs
