[package]
name = "cosmix"
version = "0.0.0"
authors = ["mintthemoon <mint@mintthemoon.xyz>"]
edition = "2021"

[lib]

[features]

[dependencies]
cosmwasm-schema = "2.1.0"
cosmwasm-std = { version = "2.1.0", features = ["cosmwasm_2_0"] }
cw-storage-plus = "2.0.0"
cw2 = "2.0.0"
miette = { version = "7.2.0" }
schemars = "0.8.16"
serde = { version = "1.0.197", default-features = false, features = ["derive"] }
serde_json = "1.0.125"
thiserror = { version = "1.0.58" }

[dev-dependencies]
cw-multi-test = "2.0.0"
